--- a/style.css
+++ b/style.css
@@ -1,79 +1,148 @@
-         
          @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300&display=swap');
-         
+
 
          * {
-            margin: 0;
-            padding: 0;
-         }   
-
+             margin: 0;
+             padding: 0;
+         }
 
          body {
-            background:  linear-gradient( -0.2turn, red, rgba(36, 4, 4, 0.925) ); 
-            font-family: 'Space Grotesk', sans-serif;
-            color: #ffffff;
-        }     
-        
-        
+             background: linear-gradient(-0.2turn, red, rgba(36, 4, 4, 0.925));
+             font-family: 'Space Grotesk', sans-serif;
+             color: #ffffff;
+         }
 
-           .cabecalho{
-                display: flex;
-                height: 10vh;
-                justify-content: space-evenly;
-                margin: 20px;
-                align-items: center;
-                background-color: rgb(255, 255, 255);
-                
-                
-            }
+         .cabecalho {
+             display: flex;
+             height: 10vh;
+             justify-content: space-between;
+             align-items: center;
+             background-color: rgb(199, 95, 95);
 
-            .cabecalho-menu{
-                display: flex;
-            }
 
-            .cabecalho-menu-item{
-                display: flex;
-                justify-content: space-between;
-                padding: 10px;
-                color: currentColor;
-                
-                
-                
-            }
+         }
 
-            .cabecalho-botao-item{
-                border-radius: 20px;
-                height: 60px;
-                width: 120px;
-                margin-top: 20px;               
-	            color: #ffffff;
-	            border: 1px solid #ffffff;
-	            border-radius: 40px;
-	            background-color: #000000;
-	            text-shadow: none;
-                font-family: 'Space Grotesk', sans-serif;
+         .cabecalho-menu {
+             display: flex;
 
-            }
+         }
 
-            .cabecalho-botao-item:hover{
-                background:transparent;
-                transition-duration: 0.4s;
-	            color: #ffffff;                
-	            border-radius: 40px;
-	            text-shadow: none;
-                cursor: pointer;
-                font-family: 'Space Grotesk', sans-serif;
+         .cabecalho-logo {
+             margin-left: 33px;
+             height: 80%;
+         }
 
-            }
+         .cabecalho-menu-item {
+             display: flex;
+             color: currentColor;
+             padding: 20px;
+             font-size: 20px;
+             text-transform: uppercase;
 
+         }
+
+         .cabecalho-botao-item {
+             border-radius: 20px;
+             height: 55px;
+             width: 130px;
+             margin-right: 33px;
+             color: #ffffff;
+             border: 1px solid #ffffff;
+             border-radius: 40px;
+             background-color: #000000;
+             text-shadow: none;
+             font-family: 'Tilt Warp', cursive;
+
+         }
+
+         .cabecalho-botao-item:hover {
+             background: transparent;
+             transition-duration: 0.4s;
+             color: #ffffff;
+             border-radius: 40px;
+             text-shadow: none;
+             cursor: pointer;
+             font-family: 'Tilt Warp', cursive;
+         }
+
+         .conteudo{
+            display: flex;
+            justify-content: center;
+            margin-left: 100px;
             
+                        
+         }
+
+         
+
+         .conteudo-principal-escrito-titulo{
+            margin-top: 100px;
+            margin-bottom: 20px;
+            font-size: 50px;
+            text-transform: uppercase;  
+            font-family: 'Tilt Warp', cursive;          
+            
+        }
+
+        .conteudo-principal-escrito-subtitulo{
+            font-size: 25px;
+            margin-top: 100px;
+            text-transform: uppercase;
+            font-family: 'Tilt Warp', cursive;
+        }
+
+        .botao{
+            border-radius: 20px;
+             height: 70px;
+             width: 180px;             
+             color: #ffffff;
+             border: 1px solid #ffffff;
+             border-radius: 40px;
+             background-color: #000000;             
+             font-family: 'Tilt Warp', cursive;
+             margin-top: 20px;
+             font-size: 20px;
+
+        }
+
+        .botao:hover{
+            background: transparent;
+             transition-duration: 0.4s;
+             color: #ffffff;
+             border-radius: 40px;
+             text-shadow: none;
+             cursor: pointer;
+             font-family: 'Tilt Warp', cursive;
+
+        }
+
+        .imagens {
+            display: flex;
+            flex-direction: column;           
+            margin: 0;
+            padding: 0;
+        }
+
+        .blusas{
+            margin-top: 100px;
+            width: 75vh;
+            height: 35em ;
+            margin-right: 100px;
+        }
+
+
+        .conteudo2{
+            display: flex;
+            flex-direction: column;
+            margin-left: 100px;
+
+        }
 
 
 
 
-        
-        
-/*         body {
+
+         /*         body {
             font-size: 100%;
             background: #161816;
         }
